app/assets/stylesheets/_newsletter.sass
@import color
@import layout

.newsletter_bar
  padding-top: .5rem
  padding-bottom: .5rem
  text-align: center
  margin: 0 auto
  clear: both
  color: $color-grey-4
  background-color: $color-blue-4

  .title
    display: inline

  form
    display: inline

  input
    border: 0
    padding: .5rem
    margin-right: .5rem
    width: 200px

  input.button
    padding: .5rem
    width: 100px
    background-color: $color-blue-3
    
    &:hover
      background-color: darken($color-blue-3, 10%)

  div.mce_inline_error
    margin-top: .75rem !important

  div.mce-error-response
    margin-top: .75rem !important
    clear: both

@media (max-width: $media-small-max)
  .newsletter_bar
    span#mc_embed_signup_scroll
      .mc-field-group
        display: block
        margin-bottom: 1.5rem

        input
          width: 80%
          height: 2.5rem
          font-size: 1rem

    .button
      font-size: 1.2rem
      padding: .75rem !important
      width: auto !important

    .title
      font-size: 1rem
      display: block
      color: $color-black
      font-weight: bold
      padding-bottom: .5rem

